--- a/acceso.html
+++ b/acceso.html
@@ -24,7 +24,7 @@
         <li><a href="principal.html" class="nav-link px-2 link-secondary">Inicio</a></li>
         <li><a href="creacion.html" class="nav-link px-2">Creación</a></li>
         <li><a href="consulta.html" class="nav-link px-2">Consulta</a></li>
-        <li><a href="votacion.html" class="nav-link px-2">Votaciónes</a></li>
+        <li><a href="votacion.html" class="nav-link px-2">Votación</a></li>
       </ul>
   
       <div class="col-md-3 text-end">
